--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ packaging==24.2
 python-dotenv==0.19.1
 requests==2.26.0
 requirement.txt==0.1.0
+redis==5.0.4
 schedule==1.2.2
 six==1.17.0
 typing_extensions==4.12.2
